# CrazyStories

./: .gitignore  README.md  main.py  pyproject.toml
data/: cbc.db  gwife.db
